--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>ClimaGlobe - Aksi Iklim dalam Genggaman Anda</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
-    
+
+    <link rel="icon" type="image/x-icon" href="src/img/ClimaGlobe 1024x1024.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
@@ -45,8 +46,8 @@
                 <img src="src\img\ClimaGlobe 1024x1024.png" alt="logo" width="50" height="50">
                 <h1 class="text-2xl font-bold text-gray-900">ClimaGlobe</h1>
             </div>
-            <a onclick="Unduh()" class="bg-blue-600 text-white font-bold py-2 px-5 rounded-md hover:bg-blue-700 transition-colors">
-                Unduh Sekarang
+            <a onclick="Unduh()" class="bg-blue-600 text-white font-bold py-3 px-5 rounded-md hover:bg-blue-700 transition-colors">
+                <i class="fa-solid fa-download fa-2xl"></i>
             </a>
         </div>
     </header>
