--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <img src="src\img\ClimaGlobe 1024x1024.png" alt="logo" width="50" height="50">
                 <h1 class="text-2xl font-bold text-gray-900">ClimaGlobe</h1>
             </div>
-            <a onclick="Unduh()" class="bg-blue-600 text-white font-bold py-3 px-5 rounded-md hover:bg-blue-700 transition-colors">
+            <button onclick="Unduh()" class="bg-blue-600 text-white font-bold py-3 px-5 rounded-md hover:bg-blue-700 transition-colors">
                 <i class="fa-solid fa-download fa-2xl"></i>
-            </a>
+            </button>
         </div>
     </header>
 
@@ -146,6 +146,12 @@
                 <h3 class="text-3xl md:text-5xl font-extrabold leading-tight text-white">
                     "Informasi Mudah. Solusi Nyata. <br class="hidden md:block" />Bersama Lawan Perubahan Iklim!"
                 </h3>
+                <p class="text-md md:text-xl font-bold leading-tight text-white mt-10">Ayo! Unduh ClimaGlobe Sekarang!</p>
+            </div>
+            <div class="container mx-auto px-6 text-center mt-5">
+                <button onclick="Unduh()" class="bg-white text-blue-600 font-bold py-3 px-5 rounded-md hover:bg-blue-100 transition-colors">
+                    Unduh <i class="fa-solid fa-download fa-2xl"></i>
+                </button>
             </div>
         </section>
 
