--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
                 <p class="text-gray-600 mb-10 max-w-2xl mx-auto">Tonton demo kami untuk melihat bagaimana ClimaGlobe bekerja melalui AR dan AI Generatif.</p>
                 <div class="max-w-4xl mx-auto aspect-video rounded-2xl overflow-hidden shadow-2xl border-2 border-gray-200">
                     <div class="w-full h-full bg-black flex items-center justify-center">
-                         <video class="w-full h-full" controls autoplay playsinline>
-                            <source type="video/mp4" src="src/vid/climaglobe.mp4">
-                        </video>
+                         <iframe class="w-full h-full" src="https://www.youtube.com/embed/wZL5UeaXDQg?si=3gCcsL8EpuVyDol0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -147,9 +145,10 @@
                     "Informasi Mudah. Solusi Nyata. <br class="hidden md:block" />Bersama Lawan Perubahan Iklim!"
                 </h3>
                 <p class="text-md md:text-xl font-bold leading-tight text-white mt-10">Ayo! Unduh ClimaGlobe Sekarang!</p>
+                <p class="text-sm font-bold text-blue-300">*Untuk sekarang hanya di perangkat Android</p>
             </div>
             <div class="container mx-auto px-6 text-center mt-5">
-                <button onclick="Unduh()" class="bg-white text-blue-600 font-bold py-3 px-5 rounded-md hover:bg-blue-100 transition-colors">
+                <button onclick="Unduh()" class="bg-white text-blue-600 font-bold py-3 px-10 rounded-md hover:bg-blue-100 transition-colors">
                     Unduh <i class="fa-solid fa-download fa-2xl"></i>
                 </button>
             </div>
@@ -163,23 +162,23 @@
                 </div>
                 <div class="flex flex-wrap justify-center gap-8">
                     <div class="text-center">
-                        <div class="w-32 h-32 mx-auto rounded-full bg-gray-200 mb-4 border-4 border-blue-200 flex items-center justify-center overflow-hidden">
+                        <!-- <div class="w-32 h-32 mx-auto rounded-full bg-gray-200 mb-4 border-4 border-blue-200 flex items-center justify-center overflow-hidden">
                             <img src="src/img/avatar.webp" alt="tim">
-                        </div>
+                        </div> -->
                         <p class="text-xl font-bold text-gray-400">Ketua</p>
                         <h4 class="text-xl font-bold text-gray-900">Leonel Rally Squall</h4>
                     </div>
                     <div class="text-center">
-                        <div class="w-32 h-32 mx-auto rounded-full bg-gray-200 mb-4 border-4 border-blue-200 flex items-center justify-center overflow-hidden">
+                        <!-- <div class="w-32 h-32 mx-auto rounded-full bg-gray-200 mb-4 border-4 border-blue-200 flex items-center justify-center overflow-hidden">
                             <img src="src/img/avatar.webp" alt="tim">
-                        </div>
+                        </div> -->
                         <p class="text-xl font-bold text-gray-400">Anggota</p>
                         <h4 class="text-xl font-bold text-gray-900">Angkasa Prawira Dirgantara</h4>
                     </div>
                     <div class="text-center">
-                        <div class="w-32 h-32 mx-auto rounded-full bg-gray-200 mb-4 border-4 border-blue-200 flex items-center justify-center overflow-hidden">
+                        <!-- <div class="w-32 h-32 mx-auto rounded-full bg-gray-200 mb-4 border-4 border-blue-200 flex items-center justify-center overflow-hidden">
                             <img src="src/img/avatar.webp" alt="tim">
-                        </div>
+                        </div> -->
                         <p class="text-xl font-bold text-gray-400">Anggota</p>
                         <h4 class="text-xl font-bold text-gray-900">Putri Rahmadani</h4>
                     </div>
